--- a/make_my_trip/public/index.html
+++ b/make_my_trip/public/index.html
@@ -24,8 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://kit.fontawesome.com/ed0c6c9c7d.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>MakeMyTrip - #1 Travel Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
